rendered/envs/alpha/kb-mcp/ingressroute-kb-vpn.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/Zebradil/myks-homelab
  name: kb-vpn
spec:
  entryPoints:
    - vpn-web
    - vpn-websecure
  routes:
    - kind: Rule
      match: Host(`kb.ts.zebradil.dev`) || Host(`kb.junior.ts.zebradil.dev`)
      services:
        - name: kb-mcp
          port: http
